bugfix: fixed uneven spacing between cards in home

--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -15,6 +15,7 @@
   }
 
   .how-hayda-works-section {
+    height: 17vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
